tinyc/test/bad/for-empty.c
int main()
{
    for () {
        int x = 1;
    }

    return 0;
}
